--- a/styles.css
+++ b/styles.css
@@ -534,7 +534,17 @@ header a {
   display: none;
 }
 
+/* podcast */
+
+.podcast-tittle{
+  font-size: 2em;
+  margin-left: 5vw;
+  margin-bottom: -25px;
+}
+
 .podpa {
+  width: 80vw;
+  height: 70vh;
   display: flex;
   flex: 1;
   align-items: center;
@@ -544,12 +554,46 @@ header a {
   margin: 0 auto;
 }
 
+.live{
+  width: 50vw;
+  height: 30vw;
+  
+
+  border: 3px solid #ff9700;
+}
+
+#twitch-chat-embed{
+  height: 90%;
+  width: 30%;
+
+  margin-left: 50px;
+
+  box-shadow: 10px 10px 3px 0px #ff9700;
+}
+
+.redesociais{
+  margin-left: 240px;
+}
+
+.redesociais img{
+  width: 3%;
+  margin: 20px;
+}
+
 .podpa img {
   max-width: 100%;
   box-shadow: 10px 10px 3px 0px rgba(255, 151, 0, 1);
   border-radius: 10px;
   margin-bottom: 20px;
+  
 }
+
+.livve{
+  margin-left: 250px;
+  margin-top: -50px;
+}
+
+/* fim podcast */
 
 .counter {
   width: 100%;
@@ -852,6 +896,67 @@ header a {
     margin-bottom: -8px;
   }
 
+  /* podcast */
+
+  .podpa {
+    max-width: 100%;
+    max-height: 100%;
+   display: flex;
+   flex-direction: column;
+    
+
+   height: 70vh;
+  }
+
+  .podpa h2{
+    font-size: 1em;
+  }
+
+  .podcast-tittle{
+    margin: 10px;
+
+    font-size: 1.5em;
+  }
+  
+  .live{
+    width: 98vw;
+    height: 160vw;
+    
+
+    /* box-shadow: 7px 7px 3px 0px rgb(255, 15, 15); */
+  }
+  
+  #twitch-chat-embed{
+    height: 100vh;
+    width: 80%;
+  
+    margin-top: 80px;
+    margin-left: 30%;
+
+    /*  border-radius: 10px; */
+
+  }
+
+  .redesociais{
+  margin-top: 0px;
+  margin-left: 10px;
+  display: flex;
+  flex-direction: column;
+
+  width: 20%;
+  }
+
+  .redesociais img{
+    width: 80%;
+  }
+
+  .livve{
+    margin-top: -350px;
+    margin-left: 10px;
+    width: 100%;
+  }
+  /* fim podcast */
+  
   .nea{
     margin-bottom: -30px;
   }
