--- a/styles.css
+++ b/styles.css
@@ -919,8 +919,8 @@ header a {
   }
   
   .live{
-    width: 98vw;
-    height: 160vw;
+    width: 400px;
+    height: 230px;
     
 
     /* box-shadow: 7px 7px 3px 0px rgb(255, 15, 15); */
