--- a/styles.css
+++ b/styles.css
@@ -568,7 +568,7 @@ header a {
   height: 420px;
   width: 300px;
 
-  margin-top: -5%;
+  margin-top: -15%;
 
   margin-left: 50px;
 
@@ -866,7 +866,7 @@ header a {
   }
 
   #scroll {
-    bottom: 80px;
+    bottom: 0px;
   }
 
   .imgneab {
@@ -935,6 +935,11 @@ header a {
     font-size: 1em;
   }
 
+  .chat{
+    
+    display: flex;
+  }
+
   .podcast-tittle{
     margin: 10px;
 
@@ -953,18 +958,24 @@ header a {
   }
   
   #twitch-chat-embed{
-    height: 100%;
+    height: 200%;
     width: 80%;
+
+   
   
-    margin-top: 80px;
+    margin-top: 40px;
     margin-left: 25%;
 
     /*  border-radius: 10px; */
 
   }
+  
+  .espace{
+    height: 100px;
+  }
 
   .redesociais{
-  margin-top: -55%;
+  margin-top: -40%;
   margin-left: -20px;
   display: flex;
   flex-direction: column;
@@ -998,7 +1009,17 @@ header a {
 
   }
   #mao{
-    margin-top: 0px;
+    margin-top: 40px;
+  }
+
+  .tittle h1 {
+    font-size: 23px;
+    
+  }
+
+  .infom{
+    font-size: 2em;
+    top: 50vh;
   }
 }
 
